BSSN in curvi coords: more on tut

--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -34,19 +34,26 @@
     "  \\partial_{0} \\beta^{i} &= B^{i} \\\\\n",
     "  \\partial_{0} B^{i} &= \\frac{3}{4} \\partial_{0} \\bar{\\Lambda}^{i} - \\eta B^{i} \\; .\n",
     "\\end{align}\n",
-    "\n",
-    "where the $\\text{TF}$ superscript denotes the trace-free part. Also, $\\bar{R}_{ij}$ is the conformal Ricci tensor, computed via\n",
+    "where \n",
+    "* the $\\text{TF}$ superscript denotes the trace-free part.\n",
+    "* $\\varepsilon_{i j} = \\gamma_{ij} - \\delta_{ij}$, where\n",
+    "     * $\\delta_{ij}$ is the [Kronecker delta](https://en.wikipedia.org/wiki/Kronecker_delta), and \n",
+    "     * $\\gamma_{ij}$, $\\beta^i$, and $\\alpha$ are the spatial 3-metric, shift vector, and lapse defined via the 3+1 decomposition line element (in [$G=c=1$ units](https://en.wikipedia.org/wiki/Planck_units)):\n",
+    "$$ds^2 = -\\alpha^2 dt^2 + \\gamma_{ij}\\left(dx^i + \\beta^i dt\\right)\\left(dx^j + \\beta^j dt\\right).$$\n",
+    "* $\\bar{R}_{ij}$ is the conformal Ricci tensor, computed via\n",
     "\\begin{align}\n",
     "  \\bar{R}_{i j} {} = {} & - \\frac{1}{2} \\bar{\\gamma}^{k l} \\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j} + \\bar{\\gamma}_{k(i} \\hat{D}_{j)} \\bar{\\Lambda}^{k} + \\Delta^{k} \\Delta_{(i j) k} \\nonumber \\\\\n",
     "  & + \\bar{\\gamma}^{k l} \\left (2 \\Delta_{k(i}^{m} \\Delta_{j) m l} + \\Delta_{i k}^{m} \\Delta_{m j l} \\right ) \\; .\n",
-    "\\end{align}"
+    "\\end{align}\n",
+    "* $\\partial_{\\perp} = \\partial_t - \\mathcal{L}_\\beta$; $\\mathcal{L}_\\beta$ is the [Lie derivative](https://en.wikipedia.org/wiki/Lie_derivative) along the shift vector $\\beta^i$.\n",
+    "* $\\partial_0 = \\partial_t - \\beta^i \\partial_i$ is an advective time derivative."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While the above equations are properly covariant, components of the rank-1 and rank-2 tensors $\\varepsilon_{i j}$, $\\bar{A}_{i j}$, and $\\bar{\\Lambda}^{i}$ will drop to zero (destroying information) or diverge (to $\\infty$) at coordinate singularities. However, this behavior is well-understood in terms of the scale factors of the reference metric, enabling us to define rescaled version of these quantities that are well behaved (so that, e.g., they can be finite differenced).\n",
+    "While the above equations are properly covariant (with the exception of the shift condition, which is a [gauge freedom](https://en.wikipedia.org/wiki/Gauge_fixing)), components of the rank-1 and rank-2 tensors $\\varepsilon_{i j}$, $\\bar{A}_{i j}$, and $\\bar{\\Lambda}^{i}$ will drop to zero (destroying information) or diverge (to $\\infty$) at coordinate singularities. However, this behavior is well-understood in terms of the scale factors of the reference metric, enabling us to define rescaled version of these quantities that are well behaved (so that, e.g., they can be finite differenced).\n",
     "\n",
     "For example, given a smooth vector *in a 3D Cartesian basis* $\\bar{\\Lambda}^{i}$, all components $\\bar{\\Lambda}^{x}$, $\\bar{\\Lambda}^{y}$, and $\\bar{\\Lambda}^{z}$ will be smooth (by assumption). When changing the basis to spherical coordinates (applying the appropriate Jacobian matrix transformation), we will find that since $\\phi = \\arctan(y/x)$, $\\bar{\\Lambda}^{\\phi}$ is given by\n",
     "\n",
