--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -36,9 +36,8 @@
     "\\end{align}\n",
     "where \n",
     "* the $\\text{TF}$ superscript denotes the trace-free part.\n",
-    "* $\\varepsilon_{i j} = \\gamma_{ij} - \\delta_{ij}$, where\n",
-    "     * $\\delta_{ij}$ is the [Kronecker delta](https://en.wikipedia.org/wiki/Kronecker_delta), and \n",
-    "     * $\\gamma_{ij}$, $\\beta^i$, and $\\alpha$ are the spatial 3-metric, shift vector, and lapse defined via the 3+1 decomposition line element (in [$G=c=1$ units](https://en.wikipedia.org/wiki/Planck_units)):\n",
+    "* $\\varepsilon_{i j} = \\bar{\\gamma}_{ij} - \\hat{\\gamma}_{ij}$, where $\\bar{\\gamma}_{ij} = e^{4\\phi} \\gamma_{ij}$ is the conformal metric. Also:\n",
+    "    * $\\gamma_{ij}$, $\\beta^i$, and $\\alpha$ are the physical (as opposed to conformal) spatial 3-metric, shift vector, and lapse, respectively, which may be defined via the 3+1 decomposition line element (in [$G=c=1$ units](https://en.wikipedia.org/wiki/Planck_units)):\n",
     "$$ds^2 = -\\alpha^2 dt^2 + \\gamma_{ij}\\left(dx^i + \\beta^i dt\\right)\\left(dx^j + \\beta^j dt\\right).$$\n",
     "* $\\bar{R}_{ij}$ is the conformal Ricci tensor, computed via\n",
     "\\begin{align}\n",
@@ -46,7 +45,15 @@
     "  & + \\bar{\\gamma}^{k l} \\left (2 \\Delta_{k(i}^{m} \\Delta_{j) m l} + \\Delta_{i k}^{m} \\Delta_{m j l} \\right ) \\; .\n",
     "\\end{align}\n",
     "* $\\partial_{\\perp} = \\partial_t - \\mathcal{L}_\\beta$; $\\mathcal{L}_\\beta$ is the [Lie derivative](https://en.wikipedia.org/wiki/Lie_derivative) along the shift vector $\\beta^i$.\n",
-    "* $\\partial_0 = \\partial_t - \\beta^i \\partial_i$ is an advective time derivative."
+    "* $\\partial_0 = \\partial_t - \\beta^i \\partial_i$ is an advective time derivative.\n",
+    "* $\\hat{D}_j$ is the [covariant derivative](https://en.wikipedia.org/wiki/Covariant_derivative) with respect to the reference metric $\\hat{\\gamma}_{ij}$.\n",
+    "* $\\bar{D}_j$ is the [covariant derivative](https://en.wikipedia.org/wiki/Covariant_derivative) with respect to the barred spatial 3-metric $\\bar{\\gamma}_{ij}$\n",
+    "* $\\Delta^i_{jk}$ is the tensor constructed from the difference of barred and hatted Christoffel symbols:\n",
+    "$$\\Delta^i_{jk} = \\bar{\\Gamma}^i_{jk} - \\hat{\\Gamma}^i_{jk}$$\n",
+    "    * The related quantity $\\Delta^i$ is defined $\\Delta^i \\equiv \\bar{\\gamma}^{jk} \\Delta^i_{jk}$.\n",
+    "* $\\bar{A}_{ij}$ is the conformal, trace-free extrinsic curvature: \n",
+    "$$\\bar{A}_{ij} = e^{-4\\phi} \\left(K_{ij} - \\frac{1}{3}\\gamma_{ij} K\\right),$$\n",
+    "where $K$ is the trace of the extrinsic curvature $K_{ij}$."
    ]
   },
   {
