--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generating C code for the right-hand-sides of Einstein's equations of general relativity in the [BSSN](http://www2.yukawa.kyoto-u.ac.jp/~yuichiro.sekiguchi/3+1.pdf) formalism, in ***curvilinear*** coordinates, using a covariant reference metric approach\n",
+    "# Einstein's equations of general relativity in the [BSSN](http://www2.yukawa.kyoto-u.ac.jp/~yuichiro.sekiguchi/3+1.pdf) formalism, in ***curvilinear*** coordinates, using a covariant reference metric approach: C code generation of the evolution equations' right-hand sides\n",
     "\n",
     "### ***Citations***: Generic curvilinear coordinate reference metric approach matches that of [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658), which is an extension of the spherical coordinate reference metric approach of [Baumgarte, Montero, Cordero-Carrión, and Müller (2012)](https://arxiv.org/abs/1211.6632), which builds upon the covariant \"Lagrangian\" BSSN formalism of [Brown (2009)](https://arxiv.org/abs/0902.3652). *See also citations within each article.*"
    ]
@@ -20,11 +20,11 @@
     "In summary, the equations we wish to input into NRPy+ are as follows (Eqs. 11 and 12 in [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658)):\n",
     "\n",
     "\\begin{align}\n",
-    "  \\partial_{\\perp} \\varepsilon_{i j} {} = {} & \\frac{2}{3} \\bar{\\gamma}_{i j} \\left (\\alpha \\bar{A}_{k}^{k} - \\bar{D}_{k} \\beta^{k}\\right ) + 2 \\hat{D}_{(i} \\beta_{j)} - 2 \\alpha \\bar{A}_{i j} \\; , \\\\\n",
+    "  \\partial_{\\perp} \\bar{\\gamma}_{i j} {} = {} & \\frac{2}{3} \\bar{\\gamma}_{i j} \\left (\\alpha \\bar{A}_{k}^{k} - \\bar{D}_{k} \\beta^{k}\\right ) + 2 \\hat{D}_{(i} \\beta_{j)} - 2 \\alpha \\bar{A}_{i j} \\; , \\\\\n",
     "  \\partial_{\\perp} \\bar{A}_{i j} {} = {} & -\\frac{2}{3} \\bar{A}_{i j} \\bar{D}_{k} \\beta^{k} - 2 \\alpha \\bar{A}_{i k} {\\bar{A}^{k}}_{j} + \\alpha \\bar{A}_{i j} K \\nonumber \\\\\n",
     "  & + e^{-4 \\phi} \\left \\{-2 \\alpha \\bar{D}_{i} \\bar{D}_{j} \\phi + 4 \\alpha \\bar{D}_{i} \\phi \\bar{D}_{j} \\phi \\right . \\nonumber \\\\\n",
     "    & \\left . + 4 \\bar{D}_{(i} \\alpha \\bar{D}_{j)} \\phi - \\bar{D}_{i} \\bar{D}_{j} \\alpha + \\alpha \\bar{R}_{i j} \\right \\}^{\\text{TF}} \\; , \\\\\n",
-    "  \\partial_{\\perp} W {} = {} & -\\frac{1}{3} W \\left (\\bar{D}_{k} \\beta^{k} - \\alpha K \\right ) \\; , \\\\\n",
+    "  \\partial_{\\perp} \\phi {} = {} & \\frac{1}{6} \\left (\\bar{D}_{k} \\beta^{k} - \\alpha K \\right ) \\; , \\\\\n",
     "  \\partial_{\\perp} K {} = {} & \\frac{1}{3} \\alpha K^{2} + \\alpha \\bar{A}_{i j} \\bar{A}^{i j} \\nonumber \\\\\n",
     "  & - e^{-4 \\phi} \\left (\\bar{D}_{i} \\bar{D}^{i} \\alpha + 2 \\bar{D}^{i} \\alpha \\bar{D}_{i} \\phi \\right ) \\; , \\\\\n",
     "  \\partial_{\\perp} \\bar{\\Lambda}^{i} {} = {} & \\bar{\\gamma}^{j k} \\hat{D}_{j} \\hat{D}_{k} \\beta^{i} + \\frac{2}{3} \\Delta^{i} \\bar{D}_{j} \\beta^{j} + \\frac{1}{3} \\bar{D}^{i} \\bar{D}_{j} \\beta^{j} \\nonumber \\\\\n",
@@ -36,8 +36,8 @@
     "\\end{align}\n",
     "where \n",
     "* the $\\text{TF}$ superscript denotes the trace-free part.\n",
-    "* $\\varepsilon_{i j} = \\bar{\\gamma}_{ij} - \\hat{\\gamma}_{ij}$, where $\\bar{\\gamma}_{ij} = e^{4\\phi} \\gamma_{ij}$ is the conformal metric. Also:\n",
-    "    * $\\gamma_{ij}$, $\\beta^i$, and $\\alpha$ are the physical (as opposed to conformal) spatial 3-metric, shift vector, and lapse, respectively, which may be defined via the 3+1 decomposition line element (in [$G=c=1$ units](https://en.wikipedia.org/wiki/Planck_units)):\n",
+    "* $\\bar{\\gamma}_{ij} = \\varepsilon_{i j} + \\hat{\\gamma}_{ij}$, where $\\bar{\\gamma}_{ij} = e^{4\\phi} \\gamma_{ij}$ is the conformal metric, $\\gamma_{ij}$ is the physical metric (see below), and $\\varepsilon_{i j}$ encodes information about the non-hatted metric.\n",
+    "* $\\gamma_{ij}$, $\\beta^i$, and $\\alpha$ are the physical (as opposed to conformal) spatial 3-metric, shift vector, and lapse, respectively, which may be defined via the 3+1 decomposition line element (in [$G=c=1$ units](https://en.wikipedia.org/wiki/Planck_units)):\n",
     "$$ds^2 = -\\alpha^2 dt^2 + \\gamma_{ij}\\left(dx^i + \\beta^i dt\\right)\\left(dx^j + \\beta^j dt\\right).$$\n",
     "* $\\bar{R}_{ij}$ is the conformal Ricci tensor, computed via\n",
     "\\begin{align}\n",
@@ -60,7 +60,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While the above equations are properly covariant (with the exception of the shift condition, which is a [gauge freedom](https://en.wikipedia.org/wiki/Gauge_fixing)), components of the rank-1 and rank-2 tensors $\\varepsilon_{i j}$, $\\bar{A}_{i j}$, and $\\bar{\\Lambda}^{i}$ will drop to zero (destroying information) or diverge (to $\\infty$) at coordinate singularities. However, this behavior is well-understood in terms of the scale factors of the reference metric, enabling us to define rescaled version of these quantities that are well behaved (so that, e.g., they can be finite differenced).\n",
+    "### The Lie derivatives\n",
+    "\n",
+    "In this section, we provide explicit expressions for the [Lie derivatives](https://en.wikipedia.org/wiki/Lie_derivative) $\\mathcal{L}_\\beta$ appearing inside the $\\partial_\\perp = \\partial_t - \\mathcal{L}_\\beta$ operators for $\\left\\{\\varepsilon_{i j},\\bar{A}_{i j},W, K, \\bar{\\Lambda}^{i}\\right\\}$.\n",
+    "\n",
+    "In short, the Lie derivative of tensor weight $w$ is given by (from [the wikipedia article on Lie derivatives](https://en.wikipedia.org/wiki/Lie_derivative))\n",
+    "\\begin{align}\n",
+    "(\\mathcal {L}_X T) ^{a_1 \\ldots a_r}{}_{b_1 \\ldots b_s} &= X^c(\\partial_c T^{a_1 \\ldots a_r}{}_{b_1 \\ldots b_s}) \\\\\n",
+    "&\\quad - (\\partial_c X ^{a_1}) T ^{c a_2 \\ldots a_r}{}_{b_1 \\ldots b_s} - \\ldots - (\\partial_c X^{a_r}) T ^{a_1 \\ldots a_{r-1}c}{}_{b_1 \\ldots b_s} \\\\\n",
+    " &\\quad  +  (\\partial_{b_1} X^c) T ^{a_1 \\ldots a_r}{}_{c b_2 \\ldots b_s} + \\ldots + (\\partial_{b_s} X^c) T ^{a_1 \\ldots a_r}{}_{b_1 \\ldots b_{s-1} c} + w (\\partial_{c} X^c) T ^{a_1 \\ldots a_r}{}_{b_1 \\ldots b_{s}}\n",
+    "\\end{align}\n",
+    "\n",
+    "Thus to evaluate the Lie derivative, one must first know the tensor density weight $w$ for each tensor. In this formulation of Einstein's equations, **all evolved quantities have density weight $w=0$**, so according to the definition of Lie derivative above,\n",
+    "\\begin{align}\n",
+    "\\mathcal{L}_\\beta \\bar{\\gamma}_{ij} &= \\beta^k \\partial_k \\bar{\\gamma}_{ij} + \\partial_i \\beta^k \\bar{\\gamma}_{kj} + \\partial_j \\beta^k \\bar{\\gamma}_{ik}, \\\\\n",
+    "\\mathcal{L}_\\beta \\bar{A}_{ij} &= \\beta^k \\partial_k \\bar{A}_{ij} + \\partial_i \\beta^k \\bar{A}_{kj} + \\partial_j \\beta^k \\bar{A}_{ik}, \\\\\n",
+    "\\mathcal{L}_\\beta K &= \\beta^k \\partial_k K, \\\\\n",
+    "\\mathcal{L}_\\beta \\phi &= \\beta^k \\partial_k \\phi, \\\\\n",
+    "\\mathcal{L}_\\beta \\bar{\\Lambda}^i &= \\beta^k \\partial_k \\bar{\\Lambda}^i - \\partial_k \\beta^i \\bar{\\Lambda}^k\n",
+    "\\end{align}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numerical Implementation: Rescaling tensors to factor out coordinate singularities\n",
+    "\n",
+    "While the above evolution equations are properly covariant (with the exception of the shift condition, which is a [freely specifiable gauge quantity](https://en.wikipedia.org/wiki/Gauge_fixing)), components of the rank-1 and rank-2 tensors $\\varepsilon_{i j}$, $\\bar{A}_{i j}$, and $\\bar{\\Lambda}^{i}$ will drop to zero (destroying information) or diverge (to $\\infty$) at coordinate singularities. However, this behavior is well-understood in terms of the scale factors of the reference metric, enabling us to define rescaled version of these quantities that are well behaved (so that, e.g., they can be finite differenced).\n",
     "\n",
     "For example, given a smooth vector *in a 3D Cartesian basis* $\\bar{\\Lambda}^{i}$, all components $\\bar{\\Lambda}^{x}$, $\\bar{\\Lambda}^{y}$, and $\\bar{\\Lambda}^{z}$ will be smooth (by assumption). When changing the basis to spherical coordinates (applying the appropriate Jacobian matrix transformation), we will find that since $\\phi = \\arctan(y/x)$, $\\bar{\\Lambda}^{\\phi}$ is given by\n",
     "\n",
@@ -105,11 +132,11 @@
     "\n",
     "Thus in the below implementation of the BSSN equations, we will first define the right-hand sides of the equations for all \"evolved\" quantities \n",
     "\n",
-    "$$\\left\\{\\varepsilon_{i j},\\bar{A}_{i j},W, K, \\bar{\\Lambda}^{i}, \\alpha, \\beta^i, B^i\\right\\},$$ \n",
+    "$$\\left\\{\\bar{\\gamma}_{i j},\\bar{A}_{i j},\\phi, K, \\bar{\\Lambda}^{i}, \\alpha, \\beta^i, B^i\\right\\},$$ \n",
     "\n",
-    "and then divide or multiply the indexed evolved quantities by the scale factors according to this prescription, so that the evolved variables are\n",
+    "and then divide or multiply the indexed evolved quantities by the scale factors according to this prescription so that the evolved variables *in our numerical scheme* are\n",
     "\n",
-    "$$\\left\\{h_{i j},a_{i j},W, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\},$$ \n",
+    "$$\\left\\{h_{i j},a_{i j},\\phi, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\},$$ \n",
     "respectively.\n",
     "\n",
     "Additionally, to ensure that *spatial* derivatives do not sample over a coordinate singularity (where there may be, e.g., a divergence), we simply apply the product/quotient rule. For example,\n",
@@ -122,7 +149,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Numerical Implementation: Spatial derivatives of barred quantities\n",
+    "\n",
+    "As described in the previous section, barred quantities may be expressed in terms of products or quotients of scale factors multiplied by smooth quantities. Thus derivatives of barred quantities must be expanded in terms of an approximate derivative of a smooth quantity multiplied by an exact expression for the derivative of the scale factor.\n",
+    "\n",
+    "### Computing the $\\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j}$ term in $\\bar{R}_{ij}$\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
