major BSSN tut update

--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -126,9 +126,23 @@
     "\n",
     "where in this case we *multiply* due to the fact that these tensors are purely covariant (as opposed to contravariant).\n",
     "\n",
-    "Since the scale factors are *time independent*, \n",
+    "To slightly simplify the notation, in NRPy+ we define *rescaling variable* ReU\\[i\\] and ReDD\\[i\\]\\[j\\], such that\n",
     "\n",
-    "$$\\partial_t \\bar{A}_{ij} = \\text{scalefactor[i]}\\ \\text{scalefactor[j]}\\  \\partial_t a_{ij}.$$\n",
+    "\\begin{align}\n",
+    "\\text{ReU[i]} &= 1 / \\text{scalefactor[i]} \\\\\n",
+    "\\text{ReDD[i][j]} &= \\text{scalefactor[i] scalefactor[j]}.\n",
+    "\\end{align}\n",
+    "\n",
+    "Thus, for example,\n",
+    "\\begin{align}\n",
+    "\\bar{A}_{ij} &= \\text{ReDD[i][j]} a_{ij} \\\\\n",
+    "\\bar{\\Lambda}^{i} &= \\text{ReU[i]} \\lambda^i,\n",
+    "\\end{align}\n",
+    "where no sums are implied by the repeated indices.\n",
+    "\n",
+    "Further, since the scale factors are *time independent*, \n",
+    "\n",
+    "$$\\partial_t \\bar{A}_{ij} = \\text{ReDD[i][j]}\\  \\partial_t a_{ij}.$$\n",
     "\n",
     "Thus in the below implementation of the BSSN equations, we will first define the right-hand sides of the equations for all \"evolved\" quantities \n",
     "\n",
@@ -141,21 +155,12 @@
     "\n",
     "Additionally, to ensure that *spatial* derivatives do not sample over a coordinate singularity (where there may be, e.g., a divergence), we simply apply the product/quotient rule. For example,\n",
     "\n",
-    "$$\\bar{\\Lambda}^{i}_{\\, ,\\, j} = -\\frac{\\lambda^i}{(\\text{scalefactor[i]})^2}\\ \\partial_j \\left(\\text{scalefactor[i]}\\right) + \\frac{\\partial_j \\lambda^i}{\\text{scalefactor[i]}},$$\n",
+    "\\begin{align}\n",
+    "\\bar{\\Lambda}^{i}_{\\, ,\\, j} &= -\\frac{\\lambda^i}{(\\text{ReU[i]})^2}\\ \\partial_j \\left(\\text{ReU[i]}\\right) + \\frac{\\partial_j \\lambda^i}{\\text{ReU[i]}} \\\\\n",
+    "&= -\\frac{\\lambda^i}{(\\text{ReU[i]})^2}\\ \\text{ReU_dD[i][j]} + \\frac{\\partial_j \\lambda^i}{\\text{ReU[i]}}\n",
+    "\\end{align}\n",
     "\n",
-    "where $\\partial_j\\left(\\text{scalefactor[i]}\\right)$ **is computed exactly** using SymPy, and the derivative $\\partial_j \\lambda^i$ represents a derivative of a *smooth* quantity (so long as $\\bar{\\Lambda}^{i}$ is smooth in a Cartesian basis)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Numerical Implementation: Spatial derivatives of barred quantities\n",
-    "\n",
-    "As described in the previous section, barred quantities may be expressed in terms of products or quotients of scale factors multiplied by smooth quantities. Thus derivatives of barred quantities must be expanded in terms of an approximate derivative of a smooth quantity multiplied by an exact expression for the derivative of the scale factor.\n",
-    "\n",
-    "### Computing the $\\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j}$ term in $\\bar{R}_{ij}$\n",
-    "\n"
+    "where the derivative $\\text{ReU_dD[i][j]}$ **is computed symbolically and exactly** using SymPy, and the derivative $\\partial_j \\lambda^i$ represents a derivative of a *smooth* quantity (so long as $\\bar{\\Lambda}^{i}$ is smooth in a Cartesian basis)."
    ]
   },
   {
@@ -199,6 +204,41 @@
     "RbarDD = ixp.register_gridfunctions_for_single_rank2(\"EVOL\",\"RbarDD\", \"sym12\")\n",
     "# Step 4b: Register scalar quantities, using gri.register_gridfunctions()\n",
     "detg = gri.register_gridfunctions(\"AUX\",[\"detg\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numerical Implementation: Spatial derivatives of barred quantities\n",
+    "\n",
+    "As described above, barred quantities may be expressed in terms of products or quotients of reference metric scale factors multiplied by smooth quantities. Thus derivatives of barred quantities must be expanded in terms of an approximate derivative of a smooth quantity multiplied by an exact expression for the derivative of the scale factor (actually, the rescaling variables ReU\\[i\\] and ReDD\\[i\\]\\[j\\], which are trivially defined in terms of the scale factors, above).\n",
+    "\n",
+    "### Computing the $\\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j}$ term in $\\bar{R}_{ij}$\n",
+    "\n",
+    "This is perhaps the most difficult term to compute, so we work out the arithme\n",
+    "\n",
+    "First, the covariant derivative of a tensor is given by (from the [wikipedia article on covariant differentiation](https://en.wikipedia.org/wiki/Covariant_derivative)):\n",
+    "\\begin{align}\n",
+    "  {(\\nabla_{e_c} T)^{a_1 \\ldots a_r}}_{b_1 \\ldots b_s} = {}\n",
+    "    &\\frac{\\partial}{\\partial x^c}{T^{a_1 \\ldots a_r}}_{b_1 \\ldots b_s} \\\\\n",
+    "    &+ \\,{\\Gamma ^{a_1}}_{dc} {T^{d a_2 \\ldots a_r}}_{b_1 \\ldots b_s} + \\cdots + {\\Gamma^{a_r}}_{dc} {T^{a_1 \\ldots a_{r-1}d}}_{b_1 \\ldots b_s} \\\\\n",
+    "    &-\\,{\\Gamma^d}_{b_1 c} {T^{a_1 \\ldots a_r}}_{d b_2 \\ldots b_s} - \\cdots - {\\Gamma^d}_{b_s c} {T^{a_1 \\ldots a_r}}_{b_1 \\ldots b_{s-1} d}.\n",
+    "\\end{align}\n",
+    "\n",
+    "Therefore, \n",
+    "\n",
+    "$$\\hat{D}_{l} \\bar{\\gamma}_{i j} = \\bar{\\gamma}_{i j,l} - \\hat{\\Gamma}^m_{i l} \\bar{\\gamma}_{m j} -\\hat{\\Gamma}^m_{j l} \\bar{\\gamma}_{i m},$$\n",
+    "where\n",
+    "\\begin{align}\n",
+    "\\bar{\\gamma}_{i j} &= \\hat{\\gamma}_{ij} + \\varepsilon_{ij} \\\\\n",
+    "&= \\hat{\\gamma}_{ij} + h_{ij} \\text{ReDD[i][j]}.\n",
+    "\\end{align}\n",
+    "So the partial derivative $\\bar{\\gamma}_{i j, k}$ is given by\n",
+    "$$\\bar{\\gamma}_{i j, k} = \\hat{\\gamma}_{ij,k} + h_{ij,k} \\text{ReDD[i][j]}  + h_{ij} \\text{ReDD_dD[i][j][k]}.$$\n",
+    "\n",
+    "Putting it together,\n",
+    "$$\\hat{D}_{l} \\bar{\\gamma}_{i j} = \\hat{\\gamma}_{ij,l} + h_{ij,l} \\text{ReDD[i][j]}  + h_{ij} \\text{ReDD_dD[i][j][l]} - \\hat{\\Gamma}^m_{i l} \\bar{\\gamma}_{m j} -\\hat{\\Gamma}^m_{j l} \\bar{\\gamma}_{i m}$$"
    ]
   },
   {
