major BSSN tut update

--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -175,6 +175,7 @@
     "import grid as gri\n",
     "import finite_difference as fin\n",
     "import reference_metric as rfm\n",
+    "rfm.reference_metric()\n",
     "from outputC import *"
    ]
   },
@@ -186,8 +187,9 @@
    "source": [
     "# Step 2a: Initialize BSSN_RHS parameters\n",
     "\n",
-    "# Step 2b: Set desired spatial dimension\n",
-    "par.set_paramsvals_value(\"grid::DIM = 3\")\n",
+    "# Step 2b: Set spatial dimension (must be 3 for BSSN)\n",
+    "DIM = 3\n",
+    "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
     "\n",
     "# Step 3: Register all needed *evolved* gridfunctions.\n",
     "# Step 3a: Register indexed quantities, using ixp.register_... functions\n",
@@ -232,25 +234,65 @@
     "where\n",
     "\\begin{align}\n",
     "\\bar{\\gamma}_{i j} &= \\hat{\\gamma}_{ij} + \\varepsilon_{ij} \\\\\n",
-    "&= \\hat{\\gamma}_{ij} + h_{ij} \\text{ReDD[i][j]}.\n",
     "\\end{align}\n",
     "So the partial derivative $\\bar{\\gamma}_{i j, k}$ is given by\n",
-    "$$\\bar{\\gamma}_{i j, k} = \\hat{\\gamma}_{ij,k} + h_{ij,k} \\text{ReDD[i][j]}  + h_{ij} \\text{ReDD_dD[i][j][k]}.$$\n",
+    "$$\\bar{\\gamma}_{i j, k} = \\hat{\\gamma}_{ij,k} + \\varepsilon_{ij,k}.$$\n",
     "\n",
     "Putting it together,\n",
-    "$$\\hat{D}_{l} \\bar{\\gamma}_{i j} = \\hat{\\gamma}_{ij,l} + h_{ij,l} \\text{ReDD[i][j]}  + h_{ij} \\text{ReDD_dD[i][j][l]} - \\hat{\\Gamma}^m_{i l} \\bar{\\gamma}_{m j} -\\hat{\\Gamma}^m_{j l} \\bar{\\gamma}_{i m}$$\n",
+    "$$\\hat{D}_{l} \\bar{\\gamma}_{i j} = \\hat{\\gamma}_{ij,l} + \\varepsilon_{ij,l} - \\hat{\\Gamma}^m_{i l} \\bar{\\gamma}_{m j} -\\hat{\\Gamma}^m_{j l} \\bar{\\gamma}_{i m}$$\n",
     "\n",
-    "Next we perform the second covariant derivative:\n",
-    "\n"
+    "Since the first covariant derivative is a tensor, the second covariant derivative is given by (same as [Eq. 27 in Baumgarte et al (2012)](https://arxiv.org/pdf/1211.6632.pdf))\n",
+    "$$\\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j} = \\partial_k \\hat{D}_{l} \\bar{\\gamma}_{i j} \n",
+    "- \\hat{\\Gamma}^m_{lk} \\left(\\hat{D}_{m} \\bar{\\gamma}_{i j}\\right) \n",
+    "- \\hat{\\Gamma}^m_{ik} \\left(\\hat{D}_{l} \\bar{\\gamma}_{m j}\\right)\n",
+    "- \\hat{\\Gamma}^m_{jk} \\left(\\hat{D}_{l} \\bar{\\gamma}_{i m}\\right),$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\partial_k \\hat{D}_{l} \\bar{\\gamma}_{i j} &= \\partial_k \\left(\\hat{\\gamma}_{ij,l} + \\varepsilon_{ij,l} - \\hat{\\Gamma}^m_{i l} \\bar{\\gamma}_{m j} -\\hat{\\Gamma}^m_{j l} \\bar{\\gamma}_{i m} \\right) \\\\\n",
+    "&= \\hat{\\gamma}_{ij,lk} + \\varepsilon_{ij,lk} - \\hat{\\Gamma}^m_{i l,k} \\bar{\\gamma}_{m j}- \\hat{\\Gamma}^m_{i l} \\bar{\\gamma}_{m j,k} - \\hat{\\Gamma}^m_{j l,k} \\bar{\\gamma}_{i m} - \\hat{\\Gamma}^m_{j l} \\bar{\\gamma}_{i m,k},\n",
+    "\\end{align}\n",
+    "and $\\bar{\\gamma}_{i j, k} = \\hat{\\gamma}_{ij,k} + \\varepsilon_{ij,k}$ as derived above.\n",
+    "\n",
+    "Also, in terms of the evolved quantity $h_{ij}$, the derivatives of $\\varepsilon_{ij}$ are given by:\n",
+    "\\begin{align}\n",
+    "\\varepsilon_{ij,k} &= \\partial_k \\left(h_{ij} \\text{ReDD[i][j]}\\right) \\\\\n",
+    "&= h_{ij,k} \\text{ReDD[i][j]} + h_{ij} \\text{ReDD_dD[i][j][k]},\n",
+    "\\end{align}\n",
+    "and\n",
+    "\\begin{align}\n",
+    "\\varepsilon_{ij,kl} &= \\partial_l \\left(h_{ij,k} \\text{ReDD[i][j]} + h_{ij} \\text{ReDD_dD[i][j][k]} \\right)\\\\\n",
+    "&= h_{ij,kl} \\text{ReDD[i][j]} + h_{ij,k} \\text{ReDD_dD[i][j][l]} + h_{ij,l} \\text{ReDD_dD[i][j][k]} + h_{ij} \\text{ReDD_dDD[i][j][k][l]}.\n",
+    "\\end{align}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hDD_dD111*xx0**2\n"
+     ]
+    }
+   ],
    "source": [
-    "# Step 5: Define "
+    "# Step 5a: Define epsDD_dD[i][j][k] and gammabarDD_dD[i][j][k] \n",
+    "hDD_dD = ixp.declarerank3(\"hDD_dD\",\"sym12\")\n",
+    "epsDD_dD = ixp.zerorank3()\n",
+    "gammabarDD_dD = ixp.zerorank3()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            epsDD_dD[i][j][k] = hDD_dD[i][j][k]*rfm.ReDD[i][j] + hDD[i][j]*rfm.ReDDdD[i][j][k]\n",
+    "            gammabarDD_dD[i][j][k] = rfm.ghatDDdD[i][j][k] + epsDD_dD[i][j][k]\n",
+    "\n",
+    "# Step 5b: Define epsDD_dD[i][j][k]\n",
+    "print(gammabarDD_dD[1][1][1])"
    ]
   }
  ],
