--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -220,7 +220,12 @@
     "\n",
     "This is perhaps the most difficult term to compute, so we work out the arithmetic below.\n",
     "\n",
-    "First, the covariant derivative of a tensor is given by (from the [wikipedia article on covariant differentiation](https://en.wikipedia.org/wiki/Covariant_derivative)):\n",
+    "First, the covariant derivative of a metric with respect to itself is zero\n",
+    "$$\\hat{D}_{l} \\hat{\\gamma}_{ij} = 0,$$\n",
+    "so \n",
+    "$$\\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j} = \\hat{D}_{k} \\hat{D}_{l} \\left(\\hat{\\gamma}_{i j} + \\varepsilon_{ij}\\right) = \\hat{D}_{k} \\hat{D}_{l} \\varepsilon_{ij}.$$\n",
+    "\n",
+    "Next, the covariant derivative of a tensor is given by (from the [wikipedia article on covariant differentiation](https://en.wikipedia.org/wiki/Covariant_derivative)):\n",
     "\\begin{align}\n",
     "  {(\\nabla_{e_c} T)^{a_1 \\ldots a_r}}_{b_1 \\ldots b_s} = {}\n",
     "    &\\frac{\\partial}{\\partial x^c}{T^{a_1 \\ldots a_r}}_{b_1 \\ldots b_s} \\\\\n",
@@ -229,33 +234,25 @@
     "\\end{align}\n",
     "\n",
     "Therefore, \n",
+    "$$\\hat{D}_{l} \\bar{\\gamma}_{i j} = \\hat{D}_{l} \\varepsilon_{i j} = \\varepsilon_{i j,l} - \\hat{\\Gamma}^m_{i l} \\varepsilon_{m j} -\\hat{\\Gamma}^m_{j l} \\varepsilon_{i m}.$$\n",
     "\n",
-    "$$\\hat{D}_{l} \\bar{\\gamma}_{i j} = \\bar{\\gamma}_{i j,l} - \\hat{\\Gamma}^m_{i l} \\bar{\\gamma}_{m j} -\\hat{\\Gamma}^m_{j l} \\bar{\\gamma}_{i m},$$\n",
-    "where\n",
+    "Since the covariant first derivative is a tensor, the covariant second derivative is given by (same as [Eq. 27 in Baumgarte et al (2012)](https://arxiv.org/pdf/1211.6632.pdf))\n",
     "\\begin{align}\n",
-    "\\bar{\\gamma}_{i j} &= \\hat{\\gamma}_{ij} + \\varepsilon_{ij} \\\\\n",
+    "\\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j} &= \\hat{D}_{k} \\hat{D}_{l} \\varepsilon_{i j}  \\\\\n",
+    "&= \\partial_k \\hat{D}_{l} \\varepsilon_{i j}\n",
+    " - \\hat{\\Gamma}^m_{lk} \\left(\\hat{D}_{m} \\varepsilon_{i j}\\right) \n",
+    " - \\hat{\\Gamma}^m_{ik} \\left(\\hat{D}_{l} \\varepsilon_{m j}\\right)\n",
+    " - \\hat{\\Gamma}^m_{jk} \\left(\\hat{D}_{l} \\varepsilon_{i m}\\right),\n",
     "\\end{align}\n",
-    "So the partial derivative $\\bar{\\gamma}_{i j, k}$ is given by\n",
-    "$$\\bar{\\gamma}_{i j, k} = \\hat{\\gamma}_{ij,k} + \\varepsilon_{ij,k}.$$\n",
     "\n",
-    "Putting it together,\n",
-    "$$\\hat{D}_{l} \\bar{\\gamma}_{i j} = \\hat{\\gamma}_{ij,l} + \\varepsilon_{ij,l} - \\hat{\\Gamma}^m_{i l} \\bar{\\gamma}_{m j} -\\hat{\\Gamma}^m_{j l} \\bar{\\gamma}_{i m}$$\n",
-    "\n",
-    "Since the first covariant derivative is a tensor, the second covariant derivative is given by (same as [Eq. 27 in Baumgarte et al (2012)](https://arxiv.org/pdf/1211.6632.pdf))\n",
-    "$$\\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j} = \\partial_k \\hat{D}_{l} \\bar{\\gamma}_{i j} \n",
-    "- \\hat{\\Gamma}^m_{lk} \\left(\\hat{D}_{m} \\bar{\\gamma}_{i j}\\right) \n",
-    "- \\hat{\\Gamma}^m_{ik} \\left(\\hat{D}_{l} \\bar{\\gamma}_{m j}\\right)\n",
-    "- \\hat{\\Gamma}^m_{jk} \\left(\\hat{D}_{l} \\bar{\\gamma}_{i m}\\right),$$\n",
-    "\n",
-    "where\n",
+    "where the first term is the partial derivative of the expression already derived for $\\hat{D}_{l} \\varepsilon_{i j}$:\n",
     "\n",
     "\\begin{align}\n",
-    "\\partial_k \\hat{D}_{l} \\bar{\\gamma}_{i j} &= \\partial_k \\left(\\hat{\\gamma}_{ij,l} + \\varepsilon_{ij,l} - \\hat{\\Gamma}^m_{i l} \\bar{\\gamma}_{m j} -\\hat{\\Gamma}^m_{j l} \\bar{\\gamma}_{i m} \\right) \\\\\n",
-    "&= \\hat{\\gamma}_{ij,lk} + \\varepsilon_{ij,lk} - \\hat{\\Gamma}^m_{i l,k} \\bar{\\gamma}_{m j}- \\hat{\\Gamma}^m_{i l} \\bar{\\gamma}_{m j,k} - \\hat{\\Gamma}^m_{j l,k} \\bar{\\gamma}_{i m} - \\hat{\\Gamma}^m_{j l} \\bar{\\gamma}_{i m,k},\n",
+    "\\partial_k \\hat{D}_{l} \\varepsilon_{i j} &= \\partial_k \\left(\\varepsilon_{ij,l} - \\hat{\\Gamma}^m_{i l} \\varepsilon_{m j} -\\hat{\\Gamma}^m_{j l} \\varepsilon_{i m} \\right) \\\\\n",
+    "&= \\varepsilon_{ij,lk} - \\hat{\\Gamma}^m_{i l,k} \\varepsilon_{m j} - \\hat{\\Gamma}^m_{i l} \\varepsilon_{m j,k} - \\hat{\\Gamma}^m_{j l,k} \\varepsilon_{i m} - \\hat{\\Gamma}^m_{j l} \\varepsilon_{i m,k}.\n",
     "\\end{align}\n",
-    "and $\\bar{\\gamma}_{i j, k} = \\hat{\\gamma}_{ij,k} + \\varepsilon_{ij,k}$ as derived above.\n",
     "\n",
-    "Also, in terms of the evolved quantity $h_{ij}$, the derivatives of $\\varepsilon_{ij}$ are given by:\n",
+    "In terms of the evolved quantity $h_{ij}$, the derivatives of $\\varepsilon_{ij}$ are given by:\n",
     "\\begin{align}\n",
     "\\varepsilon_{ij,k} &= \\partial_k \\left(h_{ij} \\text{ReDD[i][j]}\\right) \\\\\n",
     "&= h_{ij,k} \\text{ReDD[i][j]} + h_{ij} \\text{ReDD_dD[i][j][k]},\n",
@@ -264,7 +261,11 @@
     "\\begin{align}\n",
     "\\varepsilon_{ij,kl} &= \\partial_l \\left(h_{ij,k} \\text{ReDD[i][j]} + h_{ij} \\text{ReDD_dD[i][j][k]} \\right)\\\\\n",
     "&= h_{ij,kl} \\text{ReDD[i][j]} + h_{ij,k} \\text{ReDD_dD[i][j][l]} + h_{ij,l} \\text{ReDD_dD[i][j][k]} + h_{ij} \\text{ReDD_dDD[i][j][k][l]}.\n",
-    "\\end{align}"
+    "\\end{align}\n",
+    "\n",
+    "Before returning to NRPy+, let's first simplify the notation a bit:\n",
+    "$$\\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j} = \\bar{\\gamma}_{ij;\\hat{l}\\hat{k}},$$\n",
+    "so this expression within NRPy+ would be written DhatgammabarDD_dD_dD\\[i\\]\\[j\\]\\[l\\]\\[k\\]."
    ]
   },
   {
@@ -273,21 +274,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 5a: Define gammabarDD[i][j]\n",
-    "gammabarDD = ixp.zerorank3()\n",
+    "# Step 5a: Define \\varepsilon_{ij} = epsDD[i][j]\n",
+    "epsDD = ixp.zerorank3()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        gammabarDD[i][j] = rfm.ghatDD[i][j] + hDD[i][j]*rfm.ReDD[i][j]\n",
+    "        epsDD[i][j] = hDD[i][j]*rfm.ReDD[i][j]\n",
     "\n",
-    "# Step 5b: Define epsDD_dD[i][j][k] and gammabarDD_dD[i][j][k] \n",
+    "# Step 5b: Define epsDD_dD[i][j][k]\n",
     "hDD_dD = ixp.declarerank3(\"hDD_dD\",\"sym12\")\n",
     "epsDD_dD = ixp.zerorank3()\n",
-    "gammabarDD_dD = ixp.zerorank3()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            epsDD_dD[i][j][k] = hDD_dD[i][j][k]*rfm.ReDD[i][j] + hDD[i][j]*rfm.ReDDdD[i][j][k]\n",
-    "            gammabarDD_dD[i][j][k] = rfm.ghatDDdD[i][j][k] + epsDD_dD[i][j][k]\n",
     "\n",
     "# Step 5c: Define epsDD_dDD[i][j][k][l]\n",
     "hDD_dDD = ixp.declarerank4(\"hDD_dDD\",\"sym12_sym34\")\n",
@@ -306,12 +305,12 @@
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for l in range(DIM):\n",
-    "            DhatgammabarDD_dD[i][j][l] = rfm.ghatDDdD[i][j][l] + epsDD_dD[i][j][l]\n",
+    "            DhatgammabarDD_dD[i][j][l] = epsDD_dD[i][j][l]\n",
     "            for m in range(DIM):\n",
-    "                DhatgammabarDD_dD[i][j][l] -= rfm.GammahatUDD[m][i][l]*gammabarDD[m][j] \\\n",
-    "                                           -  rfm.GammahatUDD[m][j][l]*gammabarDD[i][m]\n",
+    "                DhatgammabarDD_dD[i][j][l] -= rfm.GammahatUDD[m][i][l]*epsDD[m][j] \\\n",
+    "                                           -  rfm.GammahatUDD[m][j][l]*epsDD[i][m]\n",
     "\n",
-    "# Step 5e: Define DhatgammabarDD_dD_dD[i][j][l][k] = \\bar{\\gamma}_{ij;\\hat{l},\\hat{k}}\n",
+    "# Step 5e: Define \\bar{\\gamma}_{ij;\\hat{l},k} = DhatgammabarDD_dD_dD[i][j][l][k]\n",
     "Dhat2gammabarDD_dDD = ixp.zerorank4()\n"
    ]
   }
