--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -20,7 +20,7 @@
     "In summary, the equations we wish to input into NRPy+ are as follows (Eqs. 11 and 12 in [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658)):\n",
     "\n",
     "\\begin{align}\n",
-    "  \\partial_{\\perp} \\bar{\\gamma}_{i j} {} = {} & \\frac{2}{3} \\bar{\\gamma}_{i j} \\left (\\alpha \\bar{A}_{k}^{k} - \\bar{D}_{k} \\beta^{k}\\right ) + 2 \\hat{D}_{(i} \\beta_{j)} - 2 \\alpha \\bar{A}_{i j} \\; , \\\\\n",
+    "  \\partial_{\\perp} \\bar{\\gamma}_{i j} {} = {} & \\frac{2}{3} \\bar{\\gamma}_{i j} \\left (\\alpha \\bar{A}_{k}^{k} - \\bar{D}_{k} \\beta^{k}\\right ) - 2 \\alpha \\bar{A}_{i j} \\; , \\\\\n",
     "  \\partial_{\\perp} \\bar{A}_{i j} {} = {} & -\\frac{2}{3} \\bar{A}_{i j} \\bar{D}_{k} \\beta^{k} - 2 \\alpha \\bar{A}_{i k} {\\bar{A}^{k}}_{j} + \\alpha \\bar{A}_{i j} K \\nonumber \\\\\n",
     "  & + e^{-4 \\phi} \\left \\{-2 \\alpha \\bar{D}_{i} \\bar{D}_{j} \\phi + 4 \\alpha \\bar{D}_{i} \\phi \\bar{D}_{j} \\phi \\right . \\nonumber \\\\\n",
     "    & \\left . + 4 \\bar{D}_{(i} \\alpha \\bar{D}_{j)} \\phi - \\bar{D}_{i} \\bar{D}_{j} \\alpha + \\alpha \\bar{R}_{i j} \\right \\}^{\\text{TF}} \\; , \\\\\n",
@@ -173,7 +173,7 @@
     "With these definitions, the BSSN equations for the un-rescaled evolved variables in the form $\\partial_t \\vec{U} = f\\left(\\vec{U},\\partial_i \\vec{U}, \\partial_i \\partial_j \\vec{U},...\\right)$ become\n",
     "\n",
     "\\begin{align}\n",
-    "  \\partial_t \\bar{\\gamma}_{i j} {} = {} & \\left[\\beta^k \\partial_k \\bar{\\gamma}_{ij} + \\partial_i \\beta^k \\bar{\\gamma}_{kj} + \\partial_j \\beta^k \\bar{\\gamma}_{ik} \\right] + \\frac{2}{3} \\bar{\\gamma}_{i j} \\left (\\alpha \\bar{A}_{k}^{k} - \\bar{D}_{k} \\beta^{k}\\right ) + 2 \\hat{D}_{(i} \\beta_{j)} - 2 \\alpha \\bar{A}_{i j} \\; , \\\\\n",
+    "  \\partial_t \\bar{\\gamma}_{i j} {} = {} & \\left[\\beta^k \\partial_k \\bar{\\gamma}_{ij} + \\partial_i \\beta^k \\bar{\\gamma}_{kj} + \\partial_j \\beta^k \\bar{\\gamma}_{ik} \\right] + \\frac{2}{3} \\bar{\\gamma}_{i j} \\left (\\alpha \\bar{A}_{k}^{k} - \\bar{D}_{k} \\beta^{k}\\right ) - 2 \\alpha \\bar{A}_{i j} \\; , \\\\\n",
     "  \\partial_t \\bar{A}_{i j} {} = {} & \\left[\\beta^k \\partial_k \\bar{A}_{ij} + \\partial_i \\beta^k \\bar{A}_{kj} + \\partial_j \\beta^k \\bar{A}_{ik} \\right] - \\frac{2}{3} \\bar{A}_{i j} \\bar{D}_{k} \\beta^{k} - 2 \\alpha \\bar{A}_{i k} {\\bar{A}^{k}}_{j} + \\alpha \\bar{A}_{i j} K \\nonumber \\\\\n",
     "  & + e^{-4 \\phi} \\left \\{-2 \\alpha \\bar{D}_{i} \\bar{D}_{j} \\phi + 4 \\alpha \\bar{D}_{i} \\phi \\bar{D}_{j} \\phi  + 4 \\bar{D}_{(i} \\alpha \\bar{D}_{j)} \\phi - \\bar{D}_{i} \\bar{D}_{j} \\alpha + \\alpha \\bar{R}_{i j} \\right \\}^{\\text{TF}} \\; , \\\\\n",
     "  \\partial_t \\phi {} = {} & \\left[\\beta^k \\partial_k \\phi \\right] + \\frac{1}{6} \\left (\\bar{D}_{k} \\beta^{k} - \\alpha K \\right ) \\; , \\\\\n",
@@ -554,14 +554,17 @@
    "source": [
     "## Right-hand sides of BSSN equations, part 1: $\\partial_t \\bar{\\gamma}_{i j}$\n",
     "\n",
-    "Now that the most difficult quantity to compute is out of the way, we now have a template for moving forward with the rest of the BSSN equations. Let's start with\n",
+    "Now that the most difficult quantity to compute is out of the way, we now have a template for moving forward with the rest of the BSSN equations. In the following, we will evaluate the right-hand sides of each non-evolved variable, and then rescale the result to correspond to the evolved variables as our last step. \n",
+    "\n",
+    "Before we get started, one final numerical detail: all shift advection terms (i.e., terms of the form $\\beta^i \\partial_i$) are upwinded according to the direction of the shift vector. Upwinded derivatives are given by the \"_dupD\" variable suffix.\n",
+    "\n",
+    "Let's start with\n",
     "\n",
     "$$\n",
     "\\partial_t \\bar{\\gamma}_{i j} = \n",
     "{\\underbrace {\\textstyle \\left[\\beta^k \\partial_k \\bar{\\gamma}_{ij} + \\partial_i \\beta^k \\bar{\\gamma}_{kj} + \\partial_j \\beta^k \\bar{\\gamma}_{ik} \\right]}_{\\text{Term 1}}} + \n",
-    "{\\underbrace {\\textstyle \\frac{2}{3} \\bar{\\gamma}_{i j} \\left (\\alpha \\bar{A}_{k}^{k} - \\bar{D}_{k} \\beta^{k}\\right )}_{\\text{Term 2}}} + \n",
-    "{\\underbrace {\\textstyle 2 \\hat{D}_{(i} \\beta_{j)}}_{\\text{Term 3}}}  - \n",
-    "{\\underbrace {\\textstyle 2 \\alpha \\bar{A}_{i j}}_{\\text{Term 4}}}.\n",
+    "{\\underbrace {\\textstyle \\frac{2}{3} \\bar{\\gamma}_{i j} \\left (\\alpha \\bar{A}_{k}^{k} - \\bar{D}_{k} \\beta^{k}\\right )}_{\\text{Term 2}}}\n",
+    "{\\underbrace {\\textstyle -2 \\alpha \\bar{A}_{i j}}_{\\text{Term 3}}}.\n",
     "$$\n",
     "\n",
     "### Term 1 of $\\partial_t \\bar{\\gamma}_{i j} =$ gammabar_rhsDD\\[i\\]\\[j\\]: $\\beta^k \\bar{\\gamma}_{ij,k} + \\beta^k_{,i} \\bar{\\gamma}_{kj} + \\beta^k_{,j} \\bar{\\gamma}_{ik}$\n",
@@ -589,11 +592,12 @@
     "# Step 8b: First term of \\partial_t \\bar{\\gamma}_{i j} right-hand side:\n",
     "# \\beta^k \\bar{\\gamma}_{ij,k} + \\beta^k_{,i} \\bar{\\gamma}_{kj} + \\beta^k_{,j} \\bar{\\gamma}_{ik}\n",
     "gammabar_rhsDD = ixp.zerorank2()\n",
+    "gammabarDD_dupD = ixp.declarerank3(\"gammabarDD_dupD\",\"sym12\")\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
-    "            gammabar_rhsDD[i][j] += betaU[k]*gammabarDD_dD[i][j][k] + betaU_dD[k][i]*gammabarDD[k][j] \\\n",
-    "                                                                    + betaU_dD[k][j]*gammabarDD[i][k]"
+    "            gammabar_rhsDD[i][j] += betaU[k]*gammabarDD_dupD[i][j][k] + betaU_dD[k][i]*gammabarDD[k][j] \\\n",
+    "                                                                      + betaU_dD[k][j]*gammabarDD[i][k]"
    ]
   },
   {
@@ -644,9 +648,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Term 3 of $\\partial_t \\bar{\\gamma}_{i j} =$ gammabar_rhsDD\\[i\\]\\[j\\]: $2 \\hat{D}_{(i} \\beta_{j)} = \\hat{D}_{i} \\beta_{j} + \\hat{D}_{j} \\beta_{i}$\n",
+    "### Term 3 of $\\partial_t \\bar{\\gamma}_{i j} =$ gammabar_rhsDD\\[i\\]\\[j\\]: $-2 \\alpha \\bar{A}_{ij}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 8e: Third term of \\partial_t \\bar{\\gamma}_{i j} right-hand side:\n",
+    "# -2 \\alpha \\bar{A}_{ij}\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        gammabar_rhsDD[i][j] += -2*alpha*AbarDD[i][j]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Right-hand sides of BSSN equations, part 2: $\\partial_t \\bar{A}_{i j}$\n",
     "\n",
-    "$$\\hat{D}_{i} \\beta_{j} = "
+    "$$\\partial_t \\bar{A}_{i j} = \n",
+    "{\\underbrace {\\textstyle \\left[\\beta^k \\partial_k \\bar{A}_{ij} + \\partial_i \\beta^k \\bar{A}_{kj} + \\partial_j \\beta^k \\bar{A}_{ik} \\right]}_{\\text{Term 1}}}\n",
+    "{\\underbrace {\\textstyle - \\frac{2}{3} \\bar{A}_{i j} \\bar{D}_{k} \\beta^{k} - 2 \\alpha \\bar{A}_{i k} {\\bar{A}^{k}}_{j} + \\alpha \\bar{A}_{i j} K}_{\\text{Term 2}}} + \n",
+    "{\\underbrace {\\textstyle e^{-4 \\phi} \\left \\{-2 \\alpha \\bar{D}_{i} \\bar{D}_{j} \\phi + 4 \\alpha \\bar{D}_{i} \\phi \\bar{D}_{j} \\phi  + 4 \\bar{D}_{(i} \\alpha \\bar{D}_{j)} \\phi - \\bar{D}_{i} \\bar{D}_{j} \\alpha + \\alpha \\bar{R}_{i j} \\right \\}^{\\text{TF}}}_{\\text{Term 3}}}$$\n",
+    "\n",
+    "### Term 1 of $\\partial_t \\bar{A}_{i j}$ = Abar_rhsDD\\[i\\]\\[j\\]: $\\left[\\beta^k \\partial_k \\bar{A}_{ij} + \\partial_i \\beta^k \\bar{A}_{kj} + \\partial_j \\beta^k \\bar{A}_{ik} \\right]$\n",
+    "\n",
+    "Notice the first subexpression has a $\\beta^k \\partial_k$ advection term, meaning that upwinding must take place."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Abar_rhsDD = ixp.zerorank2()\n",
+    "AbarDD_dupD = ixp.declarerank3(\"AbarDD_dupD\",\"sym12\")\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            Abar_rhsDD[i][j] += betaU[k]*AbarDD_dupD[i][j][k]"
    ]
   },
   {
