Abar_RHSs complete

--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -231,6 +231,8 @@
    "outputs": [],
    "source": [
     "# Step 2a: Initialize BSSN_RHS parameters\n",
+    "thismodule = __name__\n",
+    "par.initialize_param(par.glb_param(\"char\", thismodule, \"ConformalFactor\", \"W\"))\n",
     "\n",
     "# Step 2b: Set spatial dimension (must be 3 for BSSN)\n",
     "DIM = 3\n",
@@ -732,6 +734,112 @@
    "metadata": {},
    "source": [
     "### Term 3 of $\\partial_t \\bar{A}_{i j}$ = Abar_rhsDD\\[i\\]\\[j\\]: $e^{-4 \\phi} \\left \\{-2 \\alpha \\bar{D}_{i} \\bar{D}_{j} \\phi + 4 \\alpha \\bar{D}_{i} \\phi \\bar{D}_{j} \\phi  + 4 \\bar{D}_{(i} \\alpha \\bar{D}_{j)} \\phi - \\bar{D}_{i} \\bar{D}_{j} \\alpha + \\alpha \\bar{R}_{i j} \\right \\}^{\\text{TF}}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first covariant derivatives of $\\phi$ and $\\alpha$ are simply partial derivatives. However, $\\phi$ is not a gridfunction; \"cf\" is. cf=\"W\" (default value) denotes that the evolved variable is $W=e^{-2 \\phi}$, which results in smoother spacetime fields around puncture black holes (desirable)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'alpha_DbarD' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-293a7940acc7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDIM\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDIM\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 64\u001b[0;31m         \u001b[0mcurlybrackettermsDD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0malpha\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mphi_dBarDD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0malpha\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mphi_dBarD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mphi_dBarD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m                                     \u001b[0;34m+\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0malpha_DbarD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mphi_DbarD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m                                     \u001b[0;34m+\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0malpha_DbarD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mphi_DbarD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m                                     \u001b[0;34m-\u001b[0m\u001b[0malpha_DbarDD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mRbarDD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     65\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m \u001b[0;31m# Step 9g: Compute the trace:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'alpha_DbarD' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 9c: Define partial derivatives of \\phi in terms of evolved quantity \"cf\":\n",
+    "cf_dD = ixp.declarerank1(\"cf_dD\")\n",
+    "cf_dDD = ixp.declarerank2(\"cf_dDD\",\"sym12\")\n",
+    "phi_dD = ixp.zerorank1()\n",
+    "phi_dDD = ixp.zerorank2()\n",
+    "exp_m4phi = sp.sympify(0)\n",
+    "if par.parval_from_str(\"ConformalFactor\") == \"phi\":\n",
+    "    for i in range(DIM):\n",
+    "        phi_dD[i] = cf_dD[i]\n",
+    "        for j in range(DIM):\n",
+    "            phi_dDD[i][j] = cf_dDD[i][j]\n",
+    "    exp_m4phi = sp.exp(-4*cf)\n",
+    "elif par.parval_from_str(\"ConformalFactor\") == \"W\":\n",
+    "    # \\partial_i W = \\partial_i (e^{-2 phi}) = -2 e^{-2 phi} \\partial_i phi\n",
+    "    # -> \\partial_i phi = -\\partial_i cf / (2 cf)\n",
+    "    for i in range(DIM):\n",
+    "        phi_dD[i] = - cf_dD[i] / (2*cf)\n",
+    "        for j in range(DIM):\n",
+    "            # \\partial_j \\partial_i phi = - \\partial_j [\\partial_i cf / (2 cf)]\n",
+    "            #                           = - cf_{,ij} / (2 cf) + \\partial_i cf \\partial_j cf / (2 cf^2)\n",
+    "            phi_dDD[i][j] = (- cf_dDD[i][j] + cf_dD[i]*cf_dD[j] / cf) / (2*cf)\n",
+    "    exp_m4phi = cf*cf\n",
+    "elif par.parval_from_str(\"ConformalFactor\") == \"chi\":\n",
+    "    # \\partial_i chi = \\partial_i (e^{-4 phi}) = -4 e^{-4 phi} \\partial_i phi\n",
+    "    # -> \\partial_i phi = -\\partial_i cf / (4 cf)\n",
+    "    for i in range(DIM):\n",
+    "        phi_dD[i] = - cf_dD[i] / (4*cf)\n",
+    "        for j in range(DIM):\n",
+    "            # \\partial_j \\partial_i phi = - \\partial_j [\\partial_i cf / (4 cf)]\n",
+    "            #                           = - cf_{,ij} / (4 cf) + \\partial_i cf \\partial_j cf / (4 cf^2)\n",
+    "            phi_dDD[i][j] = (- cf_dDD[i][j] + cf_dD[i]*cf_dD[j] / cf) / (4*cf)\n",
+    "    exp_m4phi = cf\n",
+    "else:\n",
+    "    print(\"Error: ConformalFactor == \"+par.parval_from_str(\"ConformalFactor\")+\" unsupported!\")\n",
+    "    exit(1)\n",
+    "    \n",
+    "# Step 9d: Define phi_dBarD = phi_dD (since phi is a scalar) and phi_dBarDD (covariant derivative)\n",
+    "#          \\bar{D}_i \\bar{D}_j \\phi = \\phi_{;\\bar{i}\\bar{j}} = \\bar{D}_i \\phi_{,j}\n",
+    "#                                   = \\phi_{,ij} - \\bar{\\Gamma}^k_{ij} \\phi_{,k}\n",
+    "phi_dBarD = phi_dD\n",
+    "phi_dBarDD = ixp.zerorank2()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        phi_dBarDD[i][j] = phi_dDD[i][j]\n",
+    "        for k in range(DIM):\n",
+    "            phi_dBarDD[i][j] += - GammabarUDD[k][i][j]*phi_dD[k]\n",
+    "\n",
+    "# Step 9e: Define first and second derivatives of \\alpha, as well as \n",
+    "#         \\bar{D}_i \\bar{D}_j \\alpha, which is defined just like phi\n",
+    "alpha_dD = ixp.declarerank1(\"alpha_dD\")\n",
+    "alpha_dDD = ixp.declarerank2(\"alpha_dDD\",\"sym12\")\n",
+    "alpha_dBarD = alpha_dD\n",
+    "alpha_dBarDD = ixp.zerorank2()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        alpha_dBarDD[i][j] = alpha_dDD[i][j]\n",
+    "        for k in range(DIM):\n",
+    "            alpha_dBarDD[i][j] += - GammabarUDD[k][i][j]*alpha_dD[k]\n",
+    "\n",
+    "# Step 9f: Define the terms in curly braces:\n",
+    "curlybrackettermsDD = ixp.zerorank2()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        curlybrackettermsDD[i][j] = -2*alpha*phi_dBarDD[i][j] + 4*alpha*phi_dBarD[i]*phi_dBarD[j] \\\n",
+    "                                    +2*alpha_DbarD[i]*phi_DbarD[j] \\\n",
+    "                                    +2*alpha_DbarD[j]*phi_DbarD[i] \\\n",
+    "                                    -alpha_DbarDD[i][j] + alpha*RbarDD[i][j]\n",
+    "\n",
+    "# Step 9g: Compute the trace:\n",
+    "curlybracketterms_trace = sp.simpify(0)\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        curlybracketterms_trace += gammabarUU[i][j]*curlybrackettermsDD[i][j]\n",
+    "\n",
+    "# Step 9h: Third and final term of Abar_rhsDD[i][j]:\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        Abar_rhsDD[i][j] += exp_m4phi*(curlybrackettermsDD[i][j] - \\\n",
+    "                                       sp.Rational(1,3)*gammabarDD[i][j]*curlybracketterms_trace)   "
    ]
   },
   {
